# MAI-OOP-Course

./: .gitignore  README.md
Lab1/: CMakeLists.txt  run_tests.sh
lab1/: run_tests.ps1  run_tests.sh
lab1/src/: main.cpp  solution.cpp  solution.hpp
lab1/tests/: unit.cpp
